# libplacebo-rs

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: libplacebo.yml
examples/: sdl2.rs
libplacebo-sys/: Cargo.toml  build.rs
libplacebo-sys/data/: placebo.h
libplacebo-sys/examples/: sdl2.rs
libplacebo-sys/src/: lib.rs
src/: colorspace.rs  common.rs  context.rs  filter.rs  gpu.rs  lib.rs  renderer.rs  swapchain.rs  upload.rs  utility.rs  vulkan.rs
src/shaders/: colorspace.rs  mod.rs  sampling.rs
