[package]
name = "libplacebo-sys"
version = "0.1.0"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
description = "FFI bindings to libplacebo"
repository = "https://github.com/rust-av/libplacebo-rs"
edition = "2018"
license = "MIT"

[build-dependencies]
bindgen = "0.52"
system-deps = "1.3"

[dev-dependencies]
structopt = "0.3"

[dev-dependencies.sdl2]
version = "0.34.5"
default-features = false
features = ["image"]

[package.metadata.system-deps]
libplacebo = "1.20"
